# ICTPolarReal

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  ictpolarreal.sh  pyproject.toml  run.sh
configs/: eval_ictpolarreal_sample.json  eval_objaverse_samples.json  forward_baseline.yaml  inverse_baseline.yaml  train_forward_gbuffer.yaml  train_forward_polarization.yaml  train_inverse.yaml
docs/: dataset_format.md  evaluation.md  preprocessing.md  training.md
ictpolarreal/: __init__.py
ictpolarreal/data/: check.py  dataset.py  inspect.py  olat.py  polarization.py  training.py
ictpolarreal/eval/: decomposition.py  relighting.py  run.py
ictpolarreal/models/: baseline.py
ictpolarreal/processing/: material_decomposition.py  prepare_materials.py
ictpolarreal/train/: contracts.py  diffusion.py  forward.py  inverse.py
ictpolarreal/utils/: io.py  metrics.py
metadata/: LSX3_light_positions.txt  LSX3_light_z_spiral.txt
metadata/cameras/: camera00.txt  camera01.txt  camera02.txt  camera03.txt  camera04.txt  camera05.txt  camera06.txt  camera07.txt
samples/objaverse/: README.md
scripts/: check_data.sh  check_env.sh  evaluate.sh  ictpolarreal.sh  process_materials.sh  setup_env.sh  train_baseline.sh
tests/: test_polarization.py  test_training.py
