[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ictpolarreal"
version = "0.1.0"
description = "Code release for ICTPolarReal: A Polarized Reflection and Material Dataset of Real World Objects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jing Yang"},
]
dependencies = [
  "imageio>=2.31",
  "numpy>=1.23",
  "pillow>=9.5",
  "pyyaml>=6.0",
  "torch>=2.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["ictpolarreal*"]

