[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ictpolarreal"
version = "0.1.0"
description = "Code release for ICTPolarReal: A Polarized Reflection and Material Dataset of Real World Objects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jing Yang"},
]
dependencies = [
  "imageio>=2.31",
  "gdown>=5.0",
  "numpy>=1.23",
  "opencv-python>=4.8",
  "pillow>=9.5",
  "pyyaml>=6.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]
train = ["torch>=2.0"]

[tool.setuptools.packages.find]
include = ["ictpolarreal*"]
